src/objects/Secondary_Insurance_Verification__c.object
<CustomObject>
    <fields>
        <fullName>Are_SA_and_MH_Combined__c</fullName>
        <label>Are SA and MH Combined?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BH_Claims_Address__c</fullName>
        <label>BH Claims Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calender_or_Plan_Year__c</fullName>
        <label>Calender or Plan Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_VOB__c</fullName>
        <label>Date and Time of VOB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_COB_Update__c</fullName>
        <label>Date of Last COB Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detox_Benefits__c</fullName>
        <label>Detox Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detox_Copay__c</fullName>
        <label>Detox Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_INN_and_OON_Cross_accumulate__c</fullName>
        <label>Do INN and OON Cross accumulate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_payments_go_to_member_or_facility__c</fullName>
        <label>Do payments go to member or facility?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MEMBER</fullName>
                </value>
                <value>
                    <fullName>FACILITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Coinsurance_Apply__c</fullName>
        <label>Does Coinsurance Apply?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_INN_Ded_Met__c</fullName>
        <label>Family INN Ded Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_INN_Ded__c</fullName>
        <label>Family INN Ded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_INN_OOP_Met__c</fullName>
        <label>Family INN OOP Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_INN_OOP__c</fullName>
        <label>Family INN OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_OON_Ded_Met__c</fullName>
        <label>Family OON Ded Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_OON_Ded__c</fullName>
        <label>Family OON Ded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_OON_OOP_Met__c</fullName>
        <label>Family OON OOP Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_OON_OOP__c</fullName>
        <label>Family OON OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_DED_MET__c</fullName>
        <label>INN DED MET</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_DED__c</fullName>
        <label>INN DED</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Inpt_Coinsurance__c</fullName>
        <label>INN Inpt Coinsurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INN_OOP_Met__c</fullName>
        <label>INN OOP Met</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_OOP__c</fullName>
        <label>INN OOP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Outpatient_Coinsurance__c</fullName>
        <label>INN Outpatient Coinsurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IOP_Benefits__c</fullName>
        <label>IOP Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IOP_Copay__c</fullName>
        <label>IOP Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_INN_is_there_out_of_area_benefits__c</fullName>
        <label>If INN, is there out of area benefits?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_carve_out_BH_Member_ID__c</fullName>
        <label>If carve out, BH Member ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_carve_out_insurance_name_and_number__c</fullName>
        <label>If carve out, insurance name and number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ins_Rep_Name_and_Reference_Number__c</fullName>
        <label>Ins Rep Name and Reference Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Verified_By__c</fullName>
        <label>Insurance Verified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_AOB_Accepted__c</fullName>
        <label>Is AOB Accepted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_BH_carved_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is BH carved out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Freestanding_Covered__c</fullName>
        <label>Is Freestanding Covered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_OOS_covered__c</fullName>
        <label>Is OOS covered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Policy_Primary__c</fullName>
        <label>Is Policy Primary?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Subacute_detox_covered__c</fullName>
        <label>Is Subacute detox covered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_deductible_included_in_OOP__c</fullName>
        <label>Is deductible included in OOP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_patient_a_child_dependent_on_policy__c</fullName>
        <label>Is patient a child dependent on policy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_policy_INN_or_OON__c</fullName>
        <label>Is policy INN or OON?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INN</fullName>
                </value>
                <value>
                    <fullName>OON</fullName>
                </value>
                <value>
                    <fullName>Both Benefits Quoted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_policy_in_a_grace_period__c</fullName>
        <label>Is policy in a grace period?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Medicare_Plan__c</fullName>
        <label>Is this a Medicare Plan?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_cobra_policy__c</fullName>
        <label>Is this a cobra policy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_marketplace_exchange_policy__c</fullName>
        <label>Is this a marketplace/exchange policy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Secondary Insurance Verifications</relationshipLabel>
        <relationshipName>Secondary_Insurance_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiplan__c</fullName>
        <label>Multiplan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NOTES__c</fullName>
        <label>NOTES</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <label>National Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Deductible_Met__c</fullName>
        <label>OON Deductible Met</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Deductible__c</fullName>
        <label>OON Deductible</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Inpatient_Co_insurance__c</fullName>
        <label>OON Inpatient Co-insurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OON_OOP_Met__c</fullName>
        <label>OON OOP Met</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_OOP__c</fullName>
        <label>OON OOP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Outpatient_Coinsurance__c</fullName>
        <label>OON Outpatient Coinsurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PHP_Benefits__c</fullName>
        <label>PHP Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PHP_Copay__c</fullName>
        <label>PHP Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_City__c</fullName>
        <formula>Lead__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_State__c</fullName>
        <formula>Lead__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Address State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_Street__c</fullName>
        <formula>Lead__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Address_Zip__c</fullName>
        <formula>Lead__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Address Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <formula>Lead__r.Patient_Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <formula>Lead__r.DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Gender__c</fullName>
        <formula>text ( Lead__r.Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_SSN__c</fullName>
        <formula>Lead__r.Patient_SSN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_ID__c</fullName>
        <label>Payer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalty_for_no_precert__c</fullName>
        <label>Penalty for no precert?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>POS2</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>CHOICE PLUS</fullName>
                </value>
                <value>
                    <fullName>OPEN ACCESS</fullName>
                </value>
                <value>
                    <fullName>OPEN ACCESS PLUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_effective_Date__c</fullName>
        <label>Policy effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Precert_Company__c</fullName>
        <label>Precert Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precert_Phone_Number__c</fullName>
        <label>Precert Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RES_Benefits__c</fullName>
        <label>RES Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RX_Phone__c</fullName>
        <label>RX Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Type__c</fullName>
        <label>Reimbursement Rate Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Copay__c</fullName>
        <label>Res Copay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Company__c</fullName>
        <label>Rx Company</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Group_No__c</fullName>
        <formula>Lead__r.Secondary_Ins_Group_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Group No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Member_ID__c</fullName>
        <formula>Lead__r.Secondary_Ins_Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_DOB__c</fullName>
        <formula>Lead__r.Secondary_Ins_Sub_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Sub DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Employer__c</fullName>
        <formula>Lead__r.Secondary_Ins_Subscriber_Employer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Subscriber Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Last_Name__c</fullName>
        <formula>Lead__r.Secondary_Ins_Sub_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins Subscriber Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_relationship_to_sub__c</fullName>
        <formula>Lead__r.Secondary_Ins_Subscriber_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Ins relationship to sub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Company__c</fullName>
        <formula>Lead__r.Secondary_Insurance_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Insurance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Phone_Number__c</fullName>
        <formula>Lead__r.Secondary_Insurance_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Insurance Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Sub_First_Nam__c</fullName>
        <formula>Lead__r.Secondary_Ins_Subscriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Insurance Sub First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address__c</fullName>
        <formula>Lead__r.Secondary_Ins_Subscriber_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <formula>Lead__r.Secondary_Ins_Sub_email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Gender__c</fullName>
        <formula>text ( Lead__r.Secondary_Ins_Subscriber_Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone__c</fullName>
        <formula>Lead__r.Secondary_Ins_Sub_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date_if_any__c</fullName>
        <label>Term Date if any</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOB_Completed__c</fullName>
        <description>When the VOB was finished.</description>
        <label>VOB Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VOB_Initiated__c</fullName>
        <description>When the VOB was started.</description>
        <label>VOB Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_levels_require_precert__c</fullName>
        <label>What levels require precert?</label>
        <type>TextArea</type>
    </fields>
    <label>Secondary Insurance Verification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Secondary Insurance Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secondary Insurance Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>